# mathis.boerner-tu-dortmund.de

./: .gitignore  README.md
cat/: Cargo.toml
cat/src/: main.rs
cons/: Cargo.toml
cons/src/: main.rs
corr/: Cargo.toml
corr/src/: main.rs
dna/: Cargo.toml
dna/data/: rosalind_dna.txt
dna/src/: main.rs
fib/: Cargo.toml
fib/src/: main.rs
fibd/: Cargo.toml
fibd/src/: main.rs
gc/: Cargo.toml
gc/src/: main.rs
grph/: Cargo.toml
grph/src/: main.rs
hamm/: Cargo.toml
hamm/src/: main.rs
iev/: Cargo.toml
iev/src/: main.rs
inod/: inod.txt
iprb/: Cargo.toml
iprb/src/: main.rs
kmer/: Cargo.toml
kmer/src/: main.rs
kmp/: Cargo.toml
kmp/src/: main.rs
lcsm/: Cargo.toml
lcsm/src/: main.rs
lcsq/: Cargo.toml
lcsq/src/: main.rs
lexf/: Cargo.toml
lexf/src/: main.rs
lexv/: Cargo.toml
lexv/src/: main.rs
lgis/: Cargo.toml
lgis/src/: main.rs
lia/: Cargo.toml
lia/src/: main.rs
long/: Cargo.toml
long/src/: main.rs
mmch/: Cargo.toml
mmch/src/: main.rs
mprt/: Cargo.toml
mprt/src/: main.rs
mrna/: Cargo.toml
mrna/src/: main.rs
orf/: Cargo.toml
orf/src/: main.rs
pdst/: Cargo.toml
pdst/src/: main.rs
perm/: Cargo.toml
perm/src/: main.rs
pmch/: Cargo.toml
pmch/src/: main.rs
pper/: Cargo.toml
prob/: Cargo.toml
prot/: Cargo.toml
prtm/: Cargo.toml
rear/: Cargo.toml
revc/: Cargo.toml
revp/: Cargo.toml
rna/: Cargo.toml
rstr/: Cargo.toml
sign/: Cargo.toml
splc/: Cargo.toml
sseq/: Cargo.toml
sset/: sset.txt
subs/: Cargo.toml
tran/: Cargo.toml
tree/: Cargo.toml
(+17 files in other folders)
