[package]
name = "mprt"
version = "0.1.0"
authors = ["Mathis Börner <mathis.boerner@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
regex= "1.3.6"
tokio = { version = "0.2", features = ["macros"] }
url = "2.1.1"
